Category Controller, Request and route created
